bug fixes and multiple connection added